feat: compilation service