@@ -1,9 +1,6 @@
 package ru.practicum.application.compilation.service;
 
-import lombok.AccessLevel;
 import lombok.RequiredArgsConstructor;
-import lombok.experimental.FieldDefaults;
-import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -27,44 +24,57 @@ import ru.practicum.request.compilation.UpdateCompilationRequest;
 import java.util.*;
 import java.util.stream.Collectors;
 
-@Service
-@Slf4j
-@RequiredArgsConstructor
-@FieldDefaults(level = AccessLevel.PRIVATE)
-public class CompilationServiceImpl implements CompilationService {
-    final CompilationRepository compilationRepository;
-    final EventRepository eventRepository;
+import static ru.practicum.exception.NotFoundException.notFoundException;
 
-    final UserFeignClient userClient;
-    final CategoryFeignClient categoryClient;
+@Service
+@RequiredArgsConstructor
+@Transactional(readOnly = true)
+public class CompilationServiceImpl implements CompilationService {
+
+    private static final String COMPILATION_NOT_FOUND_MESSAGE = "Указанная подборка не найдена. ID: {0}";
+
+    private final CompilationRepository compilationRepository;
+    private final EventRepository eventRepository;
+
+    private final UserFeignClient userFeignClient;
+    private final CategoryFeignClient categoryFeignClient;
 
     @Override
     @Transactional
     public ResponseCompilationDto addCompilation(NewCompilationDto dto) throws NotFoundException {
-        Compilation compilation = CompilationMapper.mapToCompilation(dto);
+
+        Compilation compilation = CompilationMapper.toModel(dto);
+
         if (compilation.getPinned() == null) {
             compilation.setPinned(false);
         }
+
         List<Event> events = getEventsFromDto(dto);
         compilation.setEvents(events);
-        ResponseCompilationDto responseCompilationDto = CompilationMapper.mapToResponseCompilation(
+
+        ResponseCompilationDto responseCompilationDto = CompilationMapper.toResponseCompilationDto(
                 compilationRepository.save(compilation)
         );
+
         List<EventShortDto> eventDtos = new ArrayList<>();
+
         for (Event event : compilation.getEvents()) {
             eventDtos.add(EventMapper.mapEventToShortDto(event,
-                    categoryClient.getCategoryById(event.getCategory()),
-                    userClient.getById(event.getInitiator())));
+                    categoryFeignClient.getCategoryById(event.getCategory()),
+                    userFeignClient.getById(event.getInitiator())));
         }
+
         responseCompilationDto.setEvents(eventDtos);
 
         return responseCompilationDto;
     }
 
     @Override
+    @Transactional
     public ResponseCompilationDto updateCompilation(Long compId, UpdateCompilationRequest compilation) throws NotFoundException {
+
         Compilation old = compilationRepository.findById(compId)
-                .orElseThrow(() -> new NotFoundException("Указанная подборка не найдена " + compId));
+                .orElseThrow(notFoundException(COMPILATION_NOT_FOUND_MESSAGE, compId));
 
         Compilation update = new Compilation();
         update.setId(compId);
@@ -74,38 +84,22 @@ public class CompilationServiceImpl implements CompilationService {
         List<Event> events = getEventsFromDto(compilation);
         update.setEvents(events == null ? old.getEvents() : events);
 
-        return CompilationMapper.mapToResponseCompilation(compilationRepository.save(update));
-    }
-
-    private List<Event> getEventsFromDto(NewCompilationDto compilation) {
-        List<Event> events = Collections.emptyList();
-        if (compilation.getEvents() != null) {
-            events = eventRepository.findAllByIdIn(compilation.getEvents());
-            log.info("EventIDS: {}", events.toString());
-        }
-        return events;
-    }
-
-    private List<Event> getEventsFromDto(UpdateCompilationRequest compilation) {
-        List<Event> events = new ArrayList<>();
-        if (compilation.getEvents() != null) {
-            events = eventRepository.findAllByIdIn(compilation.getEvents());
-        }
-        return events;
+        return CompilationMapper.toResponseCompilationDto(compilationRepository.save(update));
     }
 
     @Override
     public ResponseCompilationDto getCompilationById(Long id) throws NotFoundException {
-        log.info("Получение информации о подборке, id={}", id);
-        Compilation compilation = compilationRepository.findById(id).orElseThrow(
-                () -> new NotFoundException("Подборка не найдена " + id)
-        );
+
+        Compilation compilation = compilationRepository.findById(id)
+                .orElseThrow(notFoundException(COMPILATION_NOT_FOUND_MESSAGE, id));
 
         List<Long> usersIds = compilation.getEvents().stream().map(Event::getInitiator).toList();
         Set<Long> categoriesIds = compilation.getEvents().stream().map(Event::getCategory).collect(Collectors.toSet());
-        Map<Long, UserDto> users = userClient.getUsersList(usersIds, 0, Math.max(compilation.getEvents().size(), 1)
+
+        Map<Long, UserDto> users = userFeignClient.getUsersList(usersIds, 0, Math.max(compilation.getEvents().size(), 1)
         ).stream().collect(Collectors.toMap(UserDto::getId, userDto -> userDto));
-        Map<Long, CategoryDto> categories = categoryClient.getCategoriesByIds(categoriesIds).stream()
+
+        Map<Long, CategoryDto> categories = categoryFeignClient.getCategoriesByIds(categoriesIds).stream()
                 .collect(Collectors.toMap(CategoryDto::getId, categoryDto -> categoryDto));
 
         return compileDtoWithEvents(compilation, categories, users);
@@ -113,49 +107,81 @@ public class CompilationServiceImpl implements CompilationService {
 
     @Override
     public List<ResponseCompilationDto> getCompilations(Boolean pinned, Integer from, Integer size) {
-        log.info("pinned {}", pinned);
         List<Compilation> allWithPinned = compilationRepository.findAllWithPinned(pinned, Pageable.ofSize(size + from));
         return compileDtosWithEvents(allWithPinned);
     }
 
     @Override
+    @Transactional
     public void deleteCompilation(Long id) throws ValidationException, NotFoundException {
+
         Compilation compilation = compilationRepository.findById(id)
-                .orElseThrow(() -> new NotFoundException("Указанная категория не найдена " + id));
+                .orElseThrow(notFoundException("Категория с ID: {0} - не найдена", id));
+
         try {
             compilationRepository.delete(compilation);
         } catch (Exception e) {
-            throw new ValidationException("Невозможно удаление используемой категории события " + e.getMessage());
+            throw new ValidationException("Невозможно удаление используемой категории события");
         }
     }
 
-    private List<ResponseCompilationDto> compileDtosWithEvents(List<Compilation> compilations) {
+    private List<Event> getEventsFromDto(NewCompilationDto compilation) {
+
+        List<Event> events = Collections.emptyList();
+
+        if (compilation.getEvents() != null) {
+            events = eventRepository.findAllByIdIn(compilation.getEvents());
+        }
+
+        return events;
+    }
+
+    private List<Event> getEventsFromDto(UpdateCompilationRequest compilation) {
+
         List<Event> events = new ArrayList<>();
+
+        if (compilation.getEvents() != null) {
+            events = eventRepository.findAllByIdIn(compilation.getEvents());
+        }
+
+        return events;
+    }
+
+    private List<ResponseCompilationDto> compileDtosWithEvents(List<Compilation> compilations) {
+
+        List<Event> events = new ArrayList<>();
+
         for (Compilation compilation : compilations) {
             events.addAll(compilation.getEvents());
         }
 
         List<Long> usersIds = events.stream().map(Event::getInitiator).toList();
         Set<Long> categoriesIds = events.stream().map(Event::getCategory).collect(Collectors.toSet());
-        Map<Long, UserDto> users = userClient.getUsersList(usersIds, 0, Math.max(events.size(), 1)).stream()
+
+        Map<Long, UserDto> users = userFeignClient.getUsersList(usersIds, 0, Math.max(events.size(), 1)).stream()
                 .collect(Collectors.toMap(UserDto::getId, userDto -> userDto));
-        Map<Long, CategoryDto> categories = categoryClient.getCategoriesByIds(categoriesIds).stream()
+
+        Map<Long, CategoryDto> categories = categoryFeignClient.getCategoriesByIds(categoriesIds).stream()
                 .collect(Collectors.toMap(CategoryDto::getId, categoryDto -> categoryDto));
 
         return compilations.stream()
                 .map(compilation -> compileDtoWithEvents(compilation, categories, users))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private ResponseCompilationDto compileDtoWithEvents(Compilation compilation,
                                                         Map<Long, CategoryDto> categories,
                                                         Map<Long, UserDto> users) {
-        ResponseCompilationDto result = CompilationMapper.mapToResponseCompilation(compilation);
+
+        ResponseCompilationDto result = CompilationMapper.toResponseCompilationDto(compilation);
+
         List<EventShortDto> eventDtos = new ArrayList<>();
+
         for (Event event : compilation.getEvents()) {
             eventDtos.add(EventMapper.mapEventToShortDto(event,
                     categories.get(event.getCategory()), users.get(event.getInitiator())));
         }
+
         result.setEvents(eventDtos);
         return result;
     }
